Labatt POCM Deployment to UAT 09.16.2016/objects/Marketing_Kit__c.object
<CustomObject>
    <description>This custom object is used for POC Planning (Slalom Aug 2016)</description>
    <fields>
        <fullName>Annual_Brand_Area_Budget_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Brand Area Budget Plan</label>
        <referenceTo>Annual_Brand_Area_Budget_Plan__c</referenceTo>
        <relationshipName>Marketing_Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Marketing_Program_Name__r.Brand__r.Name</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discretionary_Spend__c</fullName>
        <label>Discretionary Spend</label>
        <summarizedField>Trade_Activation_Kit_Item__c.Item_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Trade_Activation_Kit_Item__c.Marketing_Type__c</field>
            <operation>equals</operation>
            <value>Visibility, Promotional</value>
        </summaryFilterItems>
        <summaryForeignKey>Trade_Activation_Kit_Item__c.Marketing_Kit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Driver_Spend__c</fullName>
        <label>Driver Spend</label>
        <summarizedField>Trade_Activation_Kit_Item__c.Item_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Trade_Activation_Kit_Item__c.Marketing_Type__c</field>
            <operation>equals</operation>
            <value>Driver</value>
        </summaryFilterItems>
        <summaryForeignKey>Trade_Activation_Kit_Item__c.Marketing_Kit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Execution_End_Date__c</fullName>
        <label>Execution End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Start_Date__c</fullName>
        <label>Execution Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Program_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Marketing Program Name</label>
        <referenceTo>Marketing_Program__c</referenceTo>
        <relationshipName>Marketing_Kits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Spend_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC Spend Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>POC_Spend_Category__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Trade_Activation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>POC_Spend_Category__c</referenceTo>
        <relationshipName>Marketing_Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Spend__c</fullName>
        <formula>Discretionary_Spend__c +  Driver_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Shopped Kit</label>
    <nameField>
        <label>Shopped Kit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shopped Kit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Program_and_Budget_Brands_Must_Match</fullName>
        <active>true</active>
        <errorConditionFormula>Annual_Brand_Area_Budget_Plan__r.Brand__c != Marketing_Program_Name__r.Brand__c</errorConditionFormula>
        <errorMessage>Program and Budget Brands Must Match</errorMessage>
    </validationRules>
</CustomObject>